--- a/src/App.css
+++ b/src/App.css
@@ -41,9 +41,13 @@ img {
     line-height: 1;
     margin-left: 20px;
 }
+.navbar-nav .active{
+    font-weight: 600;
+    color: red !important;
+}
 footer
 {
-    margin: 20px 0px;
+    margin: 30px 0px;
     text-align: center;
     color: #6f6e6e;
 }
